Closed Bug 341860 Opened 18 years ago Closed 18 years ago

Language options: missing Hindi language

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: kaacper, Assigned: smontagu)

References

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; pl; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; pl; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4

Firefox 1.5.0.4 POLISH: Missing Hindi (hi) language from Options > Advanced > General > Edit languages.
Also, missing Kashmiri languages - both one written in Persian script and one written in Sharada script (rarely used).
Don't know if ENGLISH or other versions are affected too.

Reproducible: Always

Steps to Reproduce:
Go to Tools > Options > Advanced > General > Edit languages. See if the language is there.


Expected Results:  
Language: Hindi (hi) appears on the list.
Language: Kashmiri (ks) appears on the list.

Have no way to check if versions other than 1.5.0.4 POLISH are affected.
Depends on: 178491
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: nobody → smontagu
Component: Preferences → Internationalization
Product: Firefox → Core
QA Contact: preferences → amyy
Version: unspecified → Trunk
Hmm... how did we miss this? 
OS: Windows XP → All
Hardware: PC → All
I think that we deliberately didn't include any Indic languages because support is still incomplete and inconsistent from OS to OS. That's still true, of course, but I think we could go ahead and add them now.
(In reply to comment #2)
> I think that we deliberately didn't include any Indic languages because support
> is still incomplete and inconsistent from OS to OS. 

That's what I thought at first and must have been the case in the 'first' round, but it seems that we forgot to add Hindi when other languages written in Indic scripts were added (e.g. Bengali)

> That's still true, of
> course, but I think we could go ahead and add them now.

I fully agree. 
> 

Attached patch patchSplinter Review
This patch adds Hindi, Kannada, Kashmiri, Malayalam, Oriya, Sinhalese and Telugu.
Attachment #229386 - Flags: review?(jshin1987)
Comment on attachment 229386 [details] [diff] [review]
patch


I have a little reservation about Sinhalese and Oriya, but I guess it's all right.

BTW, we may consider adding some of them (that need their own font menu entries) to the font menu in a follow-up bug.


http://www.baraha.com/html_help/baraha/unicode_support.htm
http://si.wikipedia.org/wiki/Wikipedia_talk:Sinhala_Font_Guide#How_about_linux_font_installation.3F
Attachment #229386 - Flags: review?(jshin1987) → review+
Checked in.

(In reply to comment #5)
> BTW, we may consider adding some of them (that need their own font menu
> entries) to the font menu in a follow-up bug.

You're right, although the font menu is getting increasingly unwieldy.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
This has busted the Mac tinderboxen (at least those that have cycled since this patch).

Should 'smHindi' in the nsMacLocale.cpp change be 'smDevanagari' to match what's defined in nsUnicodeMappingUtil.cpp ?
Yes it should, sorry about that. I have checked in a corrected version.
Blocks: 354446
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: