Add several Indic languages to language.properties. Bug 341860, r=jshin