intl/locale/src/mac/nsMacLocale.cpp
@@ -95,6 +95,7 @@ const iso_lang_map lang_list[] = {
   { "id", langIndonesian,  smRoman },
   { "iu", langInuktitut, smEthiopic },
   { "ga", langIrish, smRoman }, 
+  { "hi", langHindi, smHindi },
   { "it", langItalian, smRoman },
   { "ja", langJapanese, smJapanese },
   { "jw", langJavaneseRom, smRoman },
